{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 32,
  "lineage": "f178644a-4821-604f-eea4-5db1a9a77f5f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5aa1dcacce6b081",
            "arn": "arn:aws:ec2:ap-south-1:819640458713:elastic-ip/eipalloc-0d5aa1dcacce6b081",
            "association_id": "eipassoc-072081e8fba2c5bae",
            "domain": "vpc",
            "id": "eipalloc-0d5aa1dcacce6b081",
            "instance": "i-0363c6fbcdf29c0d3",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0a4fcb7fccfe97e2d",
            "private_dns": "ip-172-31-44-81.ap-south-1.compute.internal",
            "private_ip": "172.31.44.81",
            "public_dns": "ec2-13-204-188-126.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.204.188.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "netflix-eip"
            },
            "tags_all": {
              "Name": "netflix-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_instance.ignore_ami",
            "module.ec2_instance.aws_instance.this",
            "module.ec2_instance.aws_spot_instance_request.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0317b0f0a0144b137",
            "arn": "arn:aws:ec2:ap-south-1:819640458713:instance/i-0363c6fbcdf29c0d3",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0363c6fbcdf29c0d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a4fcb7fccfe97e2d",
            "private_dns": "ip-172-31-44-81.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.44.81",
            "public_dns": "ec2-43-205-125-147.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.125.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:819640458713:key/98b56743-b305-4667-98f2-a501d3580606",
                "throughput": 125,
                "volume_id": "vol-0a49b5a5133771b34",
                "volume_size": 25,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "netflix-sg-20260213035015674600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de836eb02e4011f7",
            "tags": {
              "Environment": "dev",
              "Name": "netflix-server",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "netflix-server",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "netflix-server"
            },
            "vpc_security_group_ids": [
              "sg-00d2fcaef4c3d2350"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:819640458713:security-group/sg-00d2fcaef4c3d2350",
            "description": "Security group for Netflix clone server",
            "egress": [],
            "id": "sg-00d2fcaef4c3d2350",
            "ingress": [],
            "name": "netflix-sg-20260213035015674600000001",
            "name_prefix": "netflix-sg-",
            "owner_id": "819640458713",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "netflix-sg"
            },
            "tags_all": {
              "Name": "netflix-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0816394cafdde6a0f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1248398758",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-586191346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "sgr-0ae485c24d60b20a7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-128016623",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "sgr-0cc9d4431282698d8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1803891641",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "sgr-017f43c00345acc59",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Jenkins",
            "from_port": 8080,
            "id": "sgrule-1000357850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "sgr-04fd32a8b6a5c2d64",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SonarQube",
            "from_port": 9000,
            "id": "sgrule-1333023611",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-00d2fcaef4c3d2350",
            "security_group_rule_id": "sgr-097287d4170e2e8b1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 9000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.this",
            "module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}